# pathfinder_2e_spellcards

./: .gitignore  .zellij-layout.kdl  Cargo.nix  Cargo.toml  README.md  flake.nix  garnix.yaml  shell.nix  skip_list.txt
nethys_data/: spells-1-250.json  spells-1001-1250.json  spells-1250-1401.json  spells-251-500.json  spells-501-750.json  spells-751-1000.json
src/: db.rs  gtk.rs  json_utils.rs  main.rs  markdown.rs  render.rs  rich_text.rs  spell.rs
src/gtk/: search_spells.rs  selected_spell.rs
static/: gtk.css  style.css
templates/: base.html  page.html
templates/cantrips/: caustic_blast.html  daze.html  detect_magic.html  divine_lance.html  figment.html  guidance.html  know_the_way.html  light.html  needle_darts.html  read_aura.html  shield.html  stabilize.html  telekinetic_hand.html  telekinetic_projectile.html  void_warp.html
templates/level1/: air_bubble.html  alarm.html  ant_haul.html  bane.html  bless.html  breathe_fire.html  charm.html  cleanse_cuisine.html  command.html  create_water.html  dizzing_colors.html  enfeeble.html  fear.html  force_barrage.html  grim_tendrils.html  heal.html  phantom_pain.html  runic_weapon.html  sanctuary.html  sure_strike.html
templates/level10/: cataclysm.html
templates/level2/: acid_grip.html  animal_messenger.html  augury.html  blazing_bolt.html  blindness.html  blood_vendetta.html  blur.html  calm.html  cleanse_affliction.html  clear_mind.html  create_food.html
templates/level3/: bind_undead.html  chilling_darkness.html  clairaudience.html  cozy_cabin.html  crisis_of_faith.html
templates/level4/: creation.html  (+1 more)
(+12 files in other folders)
