[package]
name = "spellcard_generator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
json = "0.12"
printpdf = "0.7.0"
freetype-rs = "0.35"
pathfinder_geometry = "0.5"
pulldown-cmark = "0.10"
gtk4 = {version="0.8.1", features=["v4_10"]}
cairo-rs = {version="0.19", features = ["freetype"]}
xml-rs = "0.8"
